--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,3 +2,50 @@
     background-color: var(--tg-theme-button-color);
     color: var(--tg-theme-text-color);
 }
+
+.navBar_block{
+    display: flex;
+    height: 10vh;
+    width: 100%;
+    justify-content: center;
+}
+
+.navBar_links{
+    border-radius: 10px;
+    background-color: #1C1C1C;
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.navBar_link_block{
+    height: 100%;
+    display: flex;
+    width: 25%;
+    flex-direction: column;
+    align-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.navBar_link_icon{
+    width: 35px;
+}
+
+.navBar_link_item{
+    padding: 10px;
+    font-size: 1.6vh;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.unAuthorised{
+    color:red;
+}
